--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -6,6 +6,13 @@
         <div class="col">
             <h1>This is the about page</h1>
             <p>This is from template: {{index .StringMap "test"}}</p>
+            <p>
+                {{if ne (index .StringMap "remote_ip") ""}}
+                    Your remote ip address is {{index .StringMap "remote_ip"}}
+                {{else}}
+                    I dont know your IP. Go <a href="/">home page</a>
+                {{end}}
+            </p>
         </div>
     </div>
 </div>
