Displayed IP in html

--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -10,7 +10,7 @@
                 {{if ne (index .StringMap "remote_ip") ""}}
                     Your remote ip address is {{index .StringMap "remote_ip"}}
                 {{else}}
-                    I dont know your IP. Go <a href="/">home page</a>
+                    I don't know your IP. Go <a href="/">home page</a>
                 {{end}}
             </p>
         </div>
